add lock and cache